# dms

./: .copier-answers.yml  .pre-commit-config.yaml  .travis.yml  README.md  oca_dependencies.txt  requirements.txt
.github/workflows/: test.yml
account_dms_field/: README.rst  __manifest__.py
account_dms_field/demo/: account_dms_data.xml
account_dms_field/i18n/: account_dms_field.pot  it.po
account_dms_field/models/: __init__.py  account_move.py  dms_field_template.py
account_dms_field/tests/: __init__.py  test_account_dms_field.py
account_dms_field/views/: account_move_view.xml
dms/: README.md  README.rst  __init__.py  __manifest__.py  __openerp__.py  requirements.txt
dms/actions/: file.xml
dms/controllers/: __init__.py  backend.py  main.py  muk_dms_main.py  onboarding.py  portal.py
dms/data/: muk_dms_data.xml  onboarding_data.xml
dms/demo/: access_group.xml  assets.xml  category.xml  (+15 more)
dms_action/: README.rst  __manifest__.py
dms_attachment_link/: README.rst  __manifest__.py
dms_auto_classification/: README.rst  __manifest__.py
dms_field/: README.rst  __manifest__.py
dms_field_auto_classification/: README.rst  __manifest__.py
dms_partner_attachment_link/: README.rst  __manifest__.py
dms_storage/: README.rst  __manifest__.py
dms_user_role/: README.rst  __manifest__.py
dms_version/: README.rst  __init__.py  __manifest__.py
hr_dms_field/: README.rst  __manifest__.py
sale_dms_field/: README.rst  __manifest__.py
setup/_metapackage/: VERSION.txt  pyproject.toml  setup.py
web_editor_media_dialog_dms/: README.rst  __manifest__.py
(+599 files in other folders)
